Fixed size hint for combo box on windows

When you use larger fonts or DPI on windows, the combobox can
calculate a size hint that results of text eliding on items.
This fix removes some duplicate code in Vista style and adds
a dpi dependant size hint for XP style.

Task-number: QTBUG-7552
Reviewed-by: richard
(cherry picked from commit 8577353b2a5155600e672955e7c6a61e9e9519ca)